[gd_scene load_steps=13 format=1]

[ext_resource path="res://scenes/act_2/act_2.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/act_2/grave.png" type="Texture" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/rain.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/monster_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/godot_tinyfont.fnt" type="BitmapFont" id=7]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]

script/source = "extends Label

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	set_fixed_process( true )

var timer = 0
func _fixed_process(delta):
	timer -= delta
	if timer <= 0:
		timer = 1
		set_text( \"FPS: \" + str( OS.get_frames_per_second() ) )
"

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 109, 112 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 130.068, 87.354 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 22.9034, 20.7341 )

[node name="act_2" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground_bg" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, 0, 960, 0, 960, 540, 0, 540 )
uv = Vector2Array(  )
color = Color( 0.378906, 0.336871, 0.273819, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="ground" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 8, 8 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 22, 4, 65553, 5, 65554, 4, 65563, 5, 65602, 6, 65603, 6, 65604, 6, 65605, 6, 65606, 6, 65607, 6, 65608, 6, 65609, 6, 65610, 6, 65611, 6, 65612, 6, 65613, 6, 65614, 6, 65615, 6, 65616, 6, 65617, 6, 65618, 6, 131076, 1, 131078, 2, 131089, 4, 131135, 5, 131138, 6, 131139, 6, 131140, 6, 131141, 11, 131142, 6, 131143, 6, 131144, 6, 131145, 6, 131146, 6, 131147, 6, 131148, 6, 131149, 6, 131150, 6, 131151, 10, 131152, 6, 131153, 6, 131154, 6, 131184, 4, 131186, 4, 196616, 4, 196644, 4, 196650, 2, 196670, 2, 196674, 6, 196675, 10, 196676, 6, 196677, 6, 196678, 10, 196679, 6, 196680, 10, 196681, 11, 196682, 6, 196683, 10, 196684, 6, 196685, 6, 196686, 6, 196687, 10, 196688, 6, 196689, 6, 196690, 10, 196692, 2, 196721, 2, 262177, 5, 262193, 2, 262209, 5, 262210, 6, 262211, 6, 262212, 6, 262213, 11, 262214, 6, 262215, 6, 262216, 6, 262217, 6, 262218, 6, 262219, 6, 262220, 3, 262221, 6, 262222, 11, 262223, 6, 262224, 6, 262225, 6, 262226, 6, 262229, 5, 327737, 2, 327743, 6, 327744, 6, 327745, 6, 327746, 6, 327747, 6, 327748, 6, 327749, 6, 327750, 10, 327751, 9, 327752, 6, 327753, 6, 327754, 6, 327755, 11, 327756, 6, 327757, 6, 327758, 9, 327759, 6, 327760, 6, 327761, 6, 327762, 6, 327763, 6, 327764, 6, 327765, 6, 327766, 6, 393234, 2, 393235, 1, 393237, 2, 393238, 4, 393279, 10, 393280, 6, 393281, 10, 393282, 6, 393283, 11, 393284, 6, 393285, 6, 393286, 6, 393287, 6, 393288, 4, 393290, 6, 393291, 6, 393292, 6, 393293, 6, 393294, 6, 393295, 6, 393296, 6, 393297, 6, 393298, 6, 393299, 6, 393300, 10, 393301, 6, 393302, 6, 458754, 5, 458760, 5, 458800, 3, 458815, 6, 458816, 6, 458817, 6, 458818, 6, 458819, 6, 458820, 6, 458821, 11, 458822, 6, 458823, 6, 458825, 1, 458826, 6, 458827, 6, 458828, 6, 458829, 6, 458830, 6, 458831, 8, 458832, 8, 458833, 6, 458834, 6, 458835, 6, 458836, 6, 458837, 6, 458864, 1, 458865, 4, 524312, 3, 524313, 1, 524326, 1, 524351, 6, 524352, 11, 524353, 6, 524354, 6, 524355, 6, 524356, 6, 524357, 6, 524358, 6, 524359, 6, 524360, 10, 524361, 10, 524362, 10, 524363, 7, 524364, 6, 524365, 6, 524366, 10, 524367, 8, 524368, 8, 524369, 6, 524370, 11, 524371, 6, 524372, 6, 524373, 6, 524374, 6, 524394, 1, 524395, 2, 524401, 4, 589834, 1, 589836, 3, 589837, 2, 589887, 6, 589888, 6, 589889, 10, 589890, 6, 589891, 11, 589892, 6, 589893, 6, 589894, 6, 589895, 6, 589896, 6, 589897, 6, 589898, 8, 589899, 8, 589900, 6, 589901, 6, 589902, 8, 589903, 6, 589904, 6, 589905, 6, 589906, 6, 589907, 10, 589908, 6, 589909, 6, 589910, 6, 589920, 2, 655423, 6, 655424, 6, 655425, 6, 655426, 6, 655427, 7, 655428, 6, 655429, 6, 655430, 11, 655431, 9, 655432, 6, 655433, 8, 655434, 6, 655435, 6, 655436, 8, 655437, 6, 655438, 8, 655439, 6, 655440, 6, 655441, 6, 655442, 9, 655443, 6, 655444, 6, 655445, 6, 655446, 6, 655455, 2, 720916, 0, 720924, 0, 720932, 0, 720941, 0, 720949, 0, 720959, 9, 720960, 6, 720961, 6, 720962, 6, 720963, 6, 720964, 6, 720965, 11, 720966, 6, 720967, 6, 720968, 6, 720969, 6, 720970, 6, 720971, 6, 720972, 8, 720973, 10, 720974, 8, 720975, 6, 720976, 6, 720977, 6, 720978, 6, 720979, 6, 720980, 6, 720981, 6, 720982, 6, 720993, 4, 720994, 3, 786435, 4, 786442, 5, 786476, 2, 786495, 10, 786496, 6, 786497, 7, 786498, 6, 786499, 2, 786500, 6, 786501, 6, 786502, 6, 786503, 6, 786504, 8, 786505, 11, 786506, 6, 786507, 6, 786508, 8, 786509, 8, 786511, 6, 786512, 6, 786513, 10, 786514, 6, 786515, 6, 786516, 6, 786517, 6, 786518, 6, 851998, 4, 852001, 5, 852007, 2, 852012, 4, 852022, 2, 852023, 1, 852027, 1, 852031, 11, 852032, 6, 852033, 6, 852034, 6, 852035, 6, 852036, 6, 852037, 10, 852038, 8, 852039, 8, 852040, 6, 852041, 6, 852042, 8, 852043, 10, 852044, 6, 852045, 11, 852046, 6, 852047, 6, 852048, 6, 852049, 6, 852050, 6, 852051, 6, 852052, 11, 852053, 6, 852054, 6, 917567, 6, 917568, 6, 917569, 6, 917570, 9, 917571, 6, 917572, 6, 917573, 6, 917574, 11, 917575, 6, 917576, 6, 917577, 6, 917578, 6, 917579, 7, 917580, 6, 917581, 6, 917582, 6, 917583, 6, 917584, 6, 917585, 6, 917586, 9, 917587, 6, 917588, 6, 917589, 6, 917590, 6, 917606, 1, 983052, 1, 983054, 2, 983076, 4, 983103, 6, 983104, 10, 983105, 6, 983106, 6, 983107, 6, 983108, 6, 983109, 6, 983110, 6, 983111, 6, 983112, 8, 983113, 6, 983114, 6, 983115, 6, 983116, 6, 983117, 6, 983118, 6, 983119, 6, 983120, 6, 983121, 6, 983122, 6, 983123, 6, 983124, 6, 983125, 6, 983126, 6, 1048588, 3, 1048623, 1, 1048639, 6, 1048640, 11, 1048641, 6, 1048642, 6, 1048643, 6, 1048644, 11, 1048645, 6, 1048646, 11, 1048647, 10, 1048648, 6, 1048649, 6, 1048650, 6, 1048651, 6, 1048652, 6, 1048653, 6, 1048654, 6, 1048656, 6, 1048657, 6, 1048658, 6, 1048659, 6, 1048660, 6, 1048661, 6, 1048662, 6, 1114136, 4, 1114168, 4, 1114175, 6, 1114176, 6, 1114177, 6, 1114178, 6, 1114179, 7, 1114180, 6, 1114181, 6, 1114182, 6, 1114183, 6, 1114184, 6, 1114185, 6, 1114186, 6, 1114187, 8, 1114188, 6, 1114189, 6, 1114190, 6, 1114191, 6, 1114192, 6, 1114193, 6, 1114194, 6, 1114195, 6, 1114196, 6, 1114197, 6, 1114198, 6, 1179650, 1, 1179691, 2, 1179711, 6, 1179712, 10, 1179713, 11, 1179714, 6, 1179715, 6, 1179716, 6, 1179717, 6, 1179718, 6, 1179719, 6, 1179720, 11, 1179721, 6, 1179722, 6, 1179723, 9, 1179724, 10, 1179725, 6, 1179726, 11, 1179727, 10, 1179728, 6, 1179729, 6, 1179730, 6, 1179731, 6, 1179732, 6, 1179733, 6, 1179734, 6, 1245194, 7, 1245195, 9, 1245197, 1, 1245215, 2, 1245216, 1, 1245218, 3, 1245233, 2, 1245247, 6, 1245248, 6, 1245249, 6, 1245250, 6, 1245251, 6, 1245252, 6, 1245253, 8, 1245254, 9, 1245255, 6, 1245256, 6, 1245257, 6, 1245258, 6, 1245259, 6, 1245260, 6, 1245261, 6, 1245262, 10, 1245263, 6, 1245264, 11, 1245265, 6, 1245266, 6, 1245267, 6, 1245268, 6, 1245269, 6, 1245270, 6, 1245278, 1, 1310730, 8, 1310731, 10, 1310734, 4, 1310741, 5, 1310773, 1, 1310778, 2, 1310783, 1, 1310785, 3, 1310786, 6, 1310787, 6, 1310788, 6, 1310789, 11, 1310790, 6, 1310791, 6, 1310792, 6, 1310793, 6, 1310794, 6, 1310795, 6, 1310796, 6, 1310797, 11, 1310798, 6, 1310799, 6, 1310800, 6, 1310801, 6, 1310802, 6, 1310805, 3, 1376319, 3, 1376320, 4, 1376321, 2, 1376322, 6, 1376323, 6, 1376324, 6, 1376325, 6, 1376326, 6, 1376327, 6, 1376328, 6, 1376329, 6, 1376330, 6, 1376331, 6, 1376332, 6, 1376333, 6, 1376334, 6, 1376335, 6, 1376336, 6, 1376337, 6, 1376338, 6, 1376339, 3, 1376341, 2, 1376367, 2, 1441838, 8, 1441839, 7, 1441842, 4, 1441849, 1, 1441855, 2, 1441856, 1, 1441858, 6, 1441859, 6, 1441860, 6, 1441861, 6, 1441862, 6, 1441863, 6, 1441864, 6, 1441865, 10, 1441866, 9, 1441867, 11, 1441868, 4, 1441869, 6, 1441870, 6, 1441871, 6, 1441872, 6, 1441873, 6, 1441874, 6, 1441901, 2, 1441902, 1, 1507374, 9, 1507375, 10, 1572902, 4, 1572937, 2, 1638444, 2, 1638446, -1610612736, 1638459, 1, 1638474, -1610612736, 1638476, 3, 1703993, 2, 1835080, 3, 1900644, 3, 1966143, 1, 1966158, 1, 1966171, 3, 2097206, 3, 2097225, 2, 2228274, 1, 2228287, 3, 2293818, 1, 2424933, 2, 2555948, 1, 2555958, 3, 2555967, 3, 2621498, 2, 2621519, 2, 2621525, 3, 2621536, 3, 2883686, 3, 3145810, 3, 3211352, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="stuff" type="Node2D" parent="ground"]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="grave" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 146, 94 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="grave1" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 521, 256 )
texture = ExtResource( 3 )

[node name="grave5" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 486, 256 )
texture = ExtResource( 3 )

[node name="grave6" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 451, 256 )
texture = ExtResource( 3 )

[node name="grave2" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 521, 274 )
texture = ExtResource( 3 )

[node name="grave5 4" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 486, 274 )
texture = ExtResource( 3 )

[node name="grave55" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 451, 274 )
texture = ExtResource( 3 )

[node name="grave3" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 521, 292 )
texture = ExtResource( 3 )

[node name="grave5 3" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 486, 292 )
texture = ExtResource( 3 )

[node name="grave54" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 451, 292 )
texture = ExtResource( 3 )

[node name="grave4" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 521, 310 )
texture = ExtResource( 3 )

[node name="grave5 2" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 486, 310 )
texture = ExtResource( 3 )

[node name="grave53" type="Sprite" parent="ground/stuff"]

transform/pos = Vector2( 451, 310 )
texture = ExtResource( 3 )

[node name="walls" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 8, 8 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = true
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 3
collision/mask = 3
occluder/light_mask = 1
tile_data = IntArray( -65536, 16, -65535, 16, -65534, 16, -65533, 16, -65532, 16, -65531, 16, -65530, 16, -65529, 16, -65528, 16, -65527, 16, -65526, 16, -65525, 16, -65524, 16, -65523, 16, -65522, 16, -65521, 16, -65520, 16, -65519, 16, -65518, 16, -65517, 16, -65516, 16, -65515, 16, -65514, 16, -65513, 16, -65512, 16, -65511, 16, -65510, 16, -65509, 16, -65508, 16, -65507, 16, -65506, 16, -65505, 16, -65504, 16, -65503, 16, -65502, 16, -65501, 16, -65500, 16, -65499, 16, -65498, 16, -65497, 16, -65496, 16, -65495, 16, -65494, 16, -65493, 16, -65492, 16, -65491, 16, -65490, 16, -65489, 16, -65488, 16, -65487, 16, -65486, 16, -65485, 16, -65484, 16, -65483, 16, -65482, 16, -65481, 16, -65480, 16, -65479, 16, -65478, 16, -65477, 16, -65476, 16, -65475, 16, -65474, 16, -65473, 16, -65472, 16, -65471, 16, -65470, 16, -65469, 16, -65468, 16, -65467, 16, -65466, 16, -65465, 16, -65464, 16, -65463, 16, -65462, 16, -65461, 16, -65460, 16, -65459, 16, -65458, 16, -65457, 16, -65456, 16, -65455, 16, -65454, 16, -65453, 16, -65452, 16, -65451, 16, -65450, 16, -65449, 16, -65448, 16, -65447, 16, -65446, 16, -65445, 16, -65444, 16, -65443, 16, -65442, 16, -65441, 16, -65440, 16, -65439, 16, -65438, 16, -65437, 16, -65436, 16, -65435, 16, -65434, 16, -65433, 16, -65432, 16, -65431, 16, -65430, 16, -65429, 16, -65428, 16, -65427, 16, -65426, 16, -65425, 16, -65424, 16, -65423, 16, -65422, 16, -65421, 16, -65420, 16, -65419, 16, -65418, 16, -65417, 16, -65416, 16, 65598, 21, 65599, 16, 65600, 16, 65601, 16, 65602, 16, 65603, 16, 65604, 16, 65605, 16, 65606, 15, 65607, 16, 65608, 16, 65609, 16, 65610, 16, 65611, 16, 65612, 16, 65613, 16, 65614, 16, 65615, 16, 65616, 15, 65617, 16, 65618, 16, 65619, 16, 65620, 16, 65621, 16, 65622, 18, 131134, 25, 131157, 14, 131158, 25, 131185, 13, 196670, 25, 196672, 13, 196694, 25, 262153, 21, 262154, 16, 262155, 16, 262156, 15, 262157, 16, 262158, 16, 262159, 16, 262160, 16, 262161, 15, 262162, 16, 262163, 16, 262164, 16, 262165, 15, 262166, 16, 262167, 16, 262168, 16, 262169, 16, 262170, 15, 262171, 16, 262172, 16, 262173, 16, 262174, 18, 262206, 25, 262230, 20, 327689, 20, 327710, 25, 327742, 25, 327766, 25, 393225, 25, 393246, 25, 393278, 20, 393302, 25, 458761, 25, 458782, 20, 458814, 25, 458838, 25, 524297, 25, 524318, 25, 524350, 25, 524374, 25, 524385, 14, 589833, 25, 589843, 14, 589854, 20, 589869, 12, 589877, 14, 589886, 25, 589910, 25, 589921, 14, 655369, 25, 655390, 24, 655391, 15, 655392, 16, 655393, 16, 655394, 16, 655395, 16, 655396, 16, 655397, 16, 655398, 15, 655399, 16, 655400, 16, 655401, 16, 655402, 16, 655403, 16, 655404, 16, 655405, 16, 655406, 16, 655407, 16, 655408, 16, 655409, 16, 655410, 16, 655411, 16, 655412, 15, 655413, 16, 655414, 16, 655415, 16, 655416, 16, 655417, 16, 655418, 15, 655419, 16, 655420, 16, 655421, 16, 655422, 16, 655446, 25, 720905, 20, 720911, 12, 720982, 25, 786441, 25, 786518, 20, 851977, 20, 852054, 25, 917513, 25, 917527, 13, 917534, 21, 917535, 16, 917536, 16, 917537, 16, 917538, 16, 917539, 16, 917540, 15, 917541, 16, 917542, 16, 917543, 16, 917544, 16, 917545, 16, 917546, 16, 917547, 16, 917548, 16, 917549, 16, 917550, 16, 917551, 16, 917552, 16, 917553, 16, 917554, 16, 917555, 15, 917556, 16, 917557, 16, 917558, 16, 917559, 16, 917560, 16, 917561, 16, 917562, 16, 917563, 16, 917564, 16, 917565, 16, 917566, 18, 917590, 25, 983049, 25, 983070, 25, 983102, 25, 983126, 25, 1048585, 20, 1048606, 25, 1048638, 25, 1048662, 25, 1114121, 20, 1114139, 14, 1114142, 25, 1114174, 25, 1114198, 20, 1179649, 13, 1179657, 24, 1179658, 16, 1179659, 16, 1179660, 15, 1179661, 16, 1179662, 16, 1179663, 16, 1179664, 16, 1179665, 16, 1179666, 16, 1179667, 16, 1179668, 15, 1179669, 16, 1179670, 16, 1179671, 16, 1179672, 16, 1179673, 16, 1179674, 15, 1179675, 16, 1179676, 16, 1179677, 15, 1179678, 16, 1179710, 25, 1179734, 25, 1245204, 14, 1245246, 20, 1245270, 25, 1310782, 25, 1310806, 25, 1376301, 19, 1376302, 16, 1376303, 16, 1376304, 17, 1376318, 25, 1376340, 12, 1376342, 25, 1376366, 12, 1441854, 25, 1441878, 25, 1507381, 22, 1507390, 24, 1507391, 16, 1507392, 16, 1507393, 15, 1507394, 16, 1507395, 16, 1507396, 16, 1507397, 16, 1507398, 16, 1507399, 16, 1507400, 18, 1507405, 25, 1507406, 16, 1507407, 16, 1507408, 16, 1507409, 16, 1507410, 16, 1507411, 15, 1507412, 16, 1507413, 16, 1507414, 16, 1572917, 25, 1572936, 25, 1572941, 25, 1638453, 25, 1638472, 25, 1638477, 25, 1703989, 20, 1704008, 25, 1704013, 25, 1769525, 25, 1769544, 23, 1769549, 23, 1835061, 25, 1900597, 24, 1900598, 16, 1900599, 16, 1900600, 15, 1900601, 16, 1900602, 17, 1900612, 12, 1966131, 14, 2555957, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" parent="walls" instance=ExtResource( 4 )]

transform/pos = Vector2( 168.366, 101.811 )

[node name="rain" parent="walls" instance=ExtResource( 5 )]

transform/pos = Vector2( 164, 124 )

[node name="talking_monster" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 550, 155 )

[node name="monster_1" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 639, 100 )

[node name="monster_2" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 608, 82 )

[node name="monster_3" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 586, 115 )

[node name="monster_4" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 565, 62 )

[node name="monster_6" parent="walls" groups=[
"m1",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 622, 154 )

[node name="monster_11" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 366.317, 326.178 )

[node name="monster_12" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 390.547, 313.07 )

[node name="monster_13" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 410.01, 334.917 )

[node name="monster_14" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 440.199, 313.864 )

[node name="monster_15" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 472.77, 334.122 )

[node name="monster_16" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 443.774, 355.572 )

[node name="monster_17" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 411.599, 366.694 )

[node name="monster_18" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 387.369, 344.847 )

[node name="monster_19" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 364.728, 363.516 )

[node name="monster_20" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 386.575, 386.952 )

[node name="monster_21" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 434.24, 387.746 )

[node name="monster_22" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 472.77, 379.802 )

[node name="monster_23" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 407.627, 406.415 )

[node name="monster_24" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 355.989, 400.854 )

[node name="monster_25" parent="walls" groups=[
"m2",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 461.251, 410.784 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

visibility/visible = false
color = Color( 0.410196, 0.380676, 0.515625, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="infolayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="fps" type="Label" parent="infolayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 7 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="camera" parent="." instance=ExtResource( 8 )]

[node name="areas" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="first_monsters" type="Area2D" parent="areas"]

transform/pos = Vector2( 588, 112 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/first_monsters"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="monsters_2" type="Area2D" parent="areas"]

transform/pos = Vector2( 493.977, 335.169 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/monsters_2"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="respawn_1" type="Area2D" parent="areas"]

transform/pos = Vector2( 601.944, 222.474 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/respawn_1"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="endtimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="areas/first_monsters" to="." method="_on_first_monsters_body_enter"]

[connection signal="body_enter" from="areas/monsters_2" to="." method="_on_monsters_2_body_enter"]

[connection signal="body_enter" from="areas/respawn_1" to="." method="_on_respawn_1_body_enter"]

[connection signal="timeout" from="endtimer" to="." method="_on_endtimer_timeout"]


